--- a/index.html
+++ b/index.html
@@ -1,49 +1,151 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- My CSS -->
-    <link rel="stylesheet" href="./assets/docs.css">
-
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
-<body>
-    <header class="navbar navbar-expand-md navbar-dark bd-navbar">
-        <nav class="container-xxl flex-wrap flex-md-nowrap" aria-label="Main navigation">
-            <a href="#" class="navbar-brand p-0 me-2">
-                <img src="./assets/icons/icons8-nft-64_negative.png" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="bdNavbar">
-                <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav pt-2 py-md-0">
-                    <li class="nav-item col-12 col-md-auto">
-                        <a href="#Home" class="nav-link fw-bold">NFT란?</a>
-                    </li>
-                    <li class="nav-item col-12 col-md-auto">
-                        <a href="#Intro" class="nav-link fw-bold">MY NFT 소개</a>
-                    </li>
-                    <li class="nav-item col-12 col-md-auto">
-                        <a href="http://34.64.77.175:8080/lists" class="nav-link fw-bold">MY NFT 서버</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-
-    <main>
-        <h1 class="display-1">NFT Github Site</h1>
-    </main>
-    <footer>Footer</footer>
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     
-    <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="app.css">
+
+    <title>My NFT-logo</title>
+</head>
+
+<body>
+    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-2 fixed-top">
+        <a href="#" class="navbar-brand">
+            <img src="./imgs/nft_logo.png" alt="NFT-logo">
+        </a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navLinks">
+            <ul class="navbar-nav font-weight-normal">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">나의 NFT 소개</a>
+                </li>
+                <li class="nav-item">
+                    <a href="http://34.64.77.175:8080/lists" class="nav-link">나의 NFT 보기</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <section class="container-fluid px-0">
+        <div class="row align-items-center">
+            <div class="col-lg-12" id="image">
+                <div id="headingGroup" class="text-white text-brightness d-none d-lg-block mt-5">
+                    <h1 class="font-weight-bold">Welcom to MY NFT Site!</h1>
+                    <h2 class="display-5">서울과학기술대학교 빅데이터AI경영정보학 분산시스템 특론 실습 과제</h2>
+                    <p class="lead mt-5">이미지 생성 모델인 Stable Diffusion을 활용하여 <br> 유명 화가들의 화풍으로 선글라스를 착용한 팬더의 이미지를 생성하였습니다. <br> 각각의 이미지는 OpenSea 사이트에 NFT로 등록이 되어있습니다.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container px-0">
+        <div class="row align-items-center content">
+            <div class="col-md-6 text-center">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2>빈센트 반 고흐</h2>
+                        <img src="imgs/bamboo_icon_white.png" alt="" class="d-none d-lg-inline m-3">
+                        <p class="lead">빈센트 반 고흐(Vincent van Gogh)는 19세기 네덜란드의 화가로, 
+                            강렬한 색상, 감정적인 표현, 특이한 물체의 왜곡과 획일화된 스타일로 유명합니다.
+                            반 고흐는  심한 우울증과 정신적 고통을 겪으면서, 그의 작품을 통해 자신의 내면을 표현하고자 했습니다.
+                            그의 화가로서의 경력은 단지 10년도 되지 않았지만, 그는 많은 예술가와 인상주의 운동의 선구자로 인정받게 되었습니다.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img src="imgs/vincentvangogh.jpg" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="row align-items-center content">
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="imgs/pablopicasso.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2>파블로 피카소</h2>
+                        <img src="imgs/bamboo_icon_white.png" alt="" class="d-none d-lg-inline m-3">
+                        <p class="lead">파블로 피카소(Pablo Picasso)는 20세기를 대표하는 
+                            스페인 출신의 화가, 조각가이며, 시각예술 분야에서 가장 영향력 있는 인물 중 하나입니다.
+                            피카소의 작품은 그의 예술적 진화와 함께 시대와 주제의 다양성을 반영하였으며,
+                            그의 초기 작품은 '블루 피리오드(Blue Period)'와 '로즈 피리오드(Rose Period)'으로 
+                            고립, 빈곤, 사랑 등을 다루고 있습니다.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row align-items-center content">
+            <div class="col-md-6 text-center">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2>레오나르도 다 빈치</h2>
+                        <img src="imgs/bamboo_icon_white.png" alt="" class="d-none d-lg-inline m-3">
+                        <p class="lead">레오나르도 다 빈치(Leonardo da Vinci)는 이탈리아의 문화, 예술, 과학 분야에서 뛰어난 업적을 남긴 유명한 인물로,
+                            미술가로서의 다 빈치는 혁신적인 기법과 놀라운 세부 사항의 표현으로 유명합니다.
+                            그의 대표작으로는 '만인의 주', '종교전쟁', '비트루비오 모노크로미', '세례 요한', '아나그라미', '비너스와 마르스' 등이 있습니다.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img src="imgs/leonardodavinci.jpg" alt="" class="img-fluid">
+            </div>
+        </div>
+        <div class="row align-items-center content">
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="imgs/edwardhopper.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2>에드워드 호퍼</h2>
+                        <img src="imgs/bamboo_icon_white.png" alt="" class="d-none d-lg-inline m-3">
+                        <p class="lead">에드워드 호퍼(Edward Hopper)는 20세기 미국의 대표적인 화가 중 한 명으로,
+                            그는 작품을 통해 현실적이고 정적인 장면들을 그려내며, 
+                            사람들의 내면적인 상태와 고독함을 반영했습니다. 
+                            그의 작품은 시대와 문화를 넘어서 많은 사람들에게 영감을 주었으며, 
+                            현대 미술의 중요한 영향력을 가지고 있습니다.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/62fced81d3.js" crossorigin="anonymous"></script>
+
+    <script>
+        $(function () {
+            $(document).scroll(function () {
+                var $nav = $("#mainNavbar");
+                $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+            });
+        });
+    </script>
 </body>
+
 </html>
