--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <!-- Navigation -->
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-2 fixed-top">
         <a href="#" class="navbar-brand">
             <img src="./imgs/nft_logo.png" alt="NFT-logo">
@@ -45,18 +46,25 @@
                 <div id="headingGroup" class="text-white text-brightness d-none d-lg-block mt-5">
                     <h1 class="font-weight-bold">Welcom to MY NFT Site!</h1>
                     <h2 class="display-5">서울과학기술대학교 빅데이터AI경영정보학 분산시스템 특론 실습 과제</h2>
-                    <p class="lead mt-5">이미지 생성 모델인 Stable Diffusion을 활용하여 <br> 유명 화가들의 화풍으로 선글라스를 착용한 팬더의 이미지를 생성하였습니다. <br> 각각의 이미지는 OpenSea 사이트에 NFT로 등록이 되어있습니다.</p>
+                    <p class="lead mt-5">
+                        이미지 생성 모델인 Stable Diffusion을 활용하여 <br> 
+                        유명 화가들의 화풍으로 선글라스를 착용한 팬더의 이미지를 생성하였습니다. <br> 
+                        각각의 이미지는 OpenSea 사이트에 NFT로 등록이 되어있습니다. <br>
+                        자세한 사항은 상단의 "나의 NFT 보기" 메뉴을 클릭해 주세요 :)
+                    </p>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Main -->
     <section class="container px-0">
         <div class="row align-items-center content">
             <div class="col-md-6 text-center">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-                        <h2>빈센트 반 고흐</h2>
+                        <h2>NFT #1 선글라스 팬더</h2>
+                        <h3>빈센트 반 고흐</h2>
                         <img src="imgs/bamboo_icon_white.png" alt="" class="d-none d-lg-inline m-3">
                         <p class="lead">빈센트 반 고흐(Vincent van Gogh)는 19세기 네덜란드의 화가로, 
                             강렬한 색상, 감정적인 표현, 특이한 물체의 왜곡과 획일화된 스타일로 유명합니다.
@@ -77,7 +85,8 @@
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-                        <h2>파블로 피카소</h2>
+                        <h2>NFT #2 선글라스 팬더</h2>
+                        <h3>파블로 피카소</h3>
                         <img src="imgs/bamboo_icon_white.png" alt="" class="d-none d-lg-inline m-3">
                         <p class="lead">파블로 피카소(Pablo Picasso)는 20세기를 대표하는 
                             스페인 출신의 화가, 조각가이며, 시각예술 분야에서 가장 영향력 있는 인물 중 하나입니다.
@@ -93,7 +102,8 @@
             <div class="col-md-6 text-center">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-                        <h2>레오나르도 다 빈치</h2>
+                        <h2>NFT #3 선글라스 팬더</h2>
+                        <h3>레오나르도 다 빈치</h3>
                         <img src="imgs/bamboo_icon_white.png" alt="" class="d-none d-lg-inline m-3">
                         <p class="lead">레오나르도 다 빈치(Leonardo da Vinci)는 이탈리아의 문화, 예술, 과학 분야에서 뛰어난 업적을 남긴 유명한 인물로,
                             미술가로서의 다 빈치는 혁신적인 기법과 놀라운 세부 사항의 표현으로 유명합니다.
@@ -113,7 +123,8 @@
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-                        <h2>에드워드 호퍼</h2>
+                        <h2>NFT #4 선글라스 팬더</h2>
+                        <h3>에드워드 호퍼</h3>
                         <img src="imgs/bamboo_icon_white.png" alt="" class="d-none d-lg-inline m-3">
                         <p class="lead">에드워드 호퍼(Edward Hopper)는 20세기 미국의 대표적인 화가 중 한 명으로,
                             그는 작품을 통해 현실적이고 정적인 장면들을 그려내며, 
@@ -125,7 +136,21 @@
                 </div>
             </div>
         </div>
+        <div class="footer">
+            <p>빅데이터AI경영정보학 | 21712019 | 강철원</p>
+            <p>Copyright © 2023 CHUL WON KANG All Rights Reserved.</p>
+        </div>
     </section>
+
+    <!-- Footer -->
+    <!-- <section class="container px-0">
+        <div class="row">
+            <div class="footer">
+                <p>빅데이터AI경영정보학 | 21712019 | 강철원</p>
+                <p>Copyright © 2023 CHUL WON KANG All Rights Reserved.</p>
+            </div>
+        </div>
+    </section> -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
